test/sema/return.dmz
// RUN: dmz %s -res-dump 2>&1 | filecheck %s
fn foo() -> i32 {
    if (0) {
        return 1;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: expected a return value
    return;

    // CHECK: [[# @LINE + 1 ]]:16: error: unexpected return type
    return main();
}

fn bar() -> i32 {
    // CHECK: [[# @LINE + 1 ]]:5: error: expected a return value
    return;

    // CHECK: [[# @LINE + 1 ]]:12: error: symbol 'y' not found
    return y;
}

fn main() -> void {
    if (1) {
        return;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: unexpected return value in void function
    return 1;
}
// CHECK-NOT: {{.*}}
